--- a/dailyui.html
+++ b/dailyui.html
@@ -69,11 +69,11 @@
       <h4 class="modal-title">Daily UI - 022</h4>
       <h3>Search</h3>
       <div class="imgs-border">
-        <a id="openBtn" style="cursor:pointer;" data-toggle="modal" data-target="#daily_021" data-whatever="@mdo">
-          <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_22.gif">
+        <a id="openBtn" style="cursor:pointer;" data-toggle="modal" data-target="#daily_022" data-whatever="@mdo">
+          <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/9666c98ec8c36e731a70d4eeeefcda05e1c82ed8/imgs/dailyui_imgs/DailyUI_22.gif">
         </a>
       </div>
-      <p id="two" class="date"><br>2017-02-11</p>
+      <p id="two" class="date"><br>2017-03-01</p>
     </div>
 
     <div class="container-ui">
@@ -309,6 +309,60 @@
 
 
 <!--MODALS-->
+
+<!--MODAL - WF22-->
+<div class="modal" id="daily_022" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+<div class="modal-dialog" role="document">
+  <div class="modal-content" id="hello" >
+    <ul class="shot-nav">
+      <li class="shot-nav-prev" style="display:list-item">
+        <a id="openBtn" style="cursor:pointer;" data-toggle="modal" data-target="#daily_021" data-dismiss="modal" data-whatever="@mdo">
+           <img src="https://d13yacurqjgara.cloudfront.net/assets/icon-shot-prev-light-ca583c76838d54eca11832ebbcaba09ba8b2bf347de2335341d244ecb9734593.png" alt="Icon shot prev light">
+        </a>
+      </li>
+      <!--li class="shot-nav-next" style="display:list-item">
+        <a id="openBtn" style="cursor:pointer;" data-toggle="modal" data-target="#daily_023" data-dismiss="modal" data-whatever="@mdo">
+          <img src="https://d13yacurqjgara.cloudfront.net/assets/icon-shot-next-light-871a18220c4c5a0325d1353f8e4cc204c3b49beacc63500644556faf25ded617.png" alt="Icon shot next light">
+        </a>
+      </li-->
+    </ul>
+    <div style="text-align:center;"class="modal-header">
+      <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <ul class="title col-xs-12 col-sm-12 col-md-12 col-lg-12" >
+          <li class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
+            <img src="https://dl.dropboxusercontent.com/s/ndsf9pd1r6v98tf/oscarlinkedin4.jpg?dl=0">
+          </li>
+          <li class="col-xs-10 col-sm-8 col-md-8 col-lg-8">
+            <h4 class="modal-title" id="title5">Daily UI - 022<span><br>Search by <a href="https://dribbble.com/oscarlund" target="_blank" rel="noreferrer">Oscar Lund</a><span class="date2"> on March 01, 2017</span></span>
+            </h4>
+          </li>
+        </ul>
+    </div>
+    <div id="img5" style="text-align:center; " class="modal-body">
+        <div class="container-ui" style="margin-top:-15px;">
+          <div class="imgs-border">
+            <a target="_blank" rel="noreferrer" href="https://raw.githubusercontent.com/oscarlund/portfolio2/9666c98ec8c36e731a70d4eeeefcda05e1c82ed8/imgs/dailyui_imgs/DailyUI_22.gif">
+              <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/9666c98ec8c36e731a70d4eeeefcda05e1c82ed8/imgs/dailyui_imgs/DailyUI_22.gif">
+            </a>
+          </div>
+          <!--p class="date"><br>2017-01-03</p-->
+        </div>
+      <!--TEXT Transaction Emails-->
+      <div id="text5" class="modal-text-container">
+      <p style="font-size:13px;">
+        Calm color scheme in an early stage search bar mock up.
+      </div>
+      <!--TEXT Transaction Emails END-->
+
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      <!--button type="button" class="btn btn-primary">Send message</button-->
+    </div>
+  </div>
+</div>
+</div>
+<!--MODAL WF22 End-->
 <!--MODAL - WF21-->
 <div class="modal" id="daily_021" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
 <div class="modal-dialog" role="document">
@@ -319,11 +373,11 @@
            <img src="https://d13yacurqjgara.cloudfront.net/assets/icon-shot-prev-light-ca583c76838d54eca11832ebbcaba09ba8b2bf347de2335341d244ecb9734593.png" alt="Icon shot prev light">
         </a>
       </li>
-      <!--li class="shot-nav-next" style="display:list-item">
+      <li class="shot-nav-next" style="display:list-item">
         <a id="openBtn" style="cursor:pointer;" data-toggle="modal" data-target="#daily_022" data-dismiss="modal" data-whatever="@mdo">
           <img src="https://d13yacurqjgara.cloudfront.net/assets/icon-shot-next-light-871a18220c4c5a0325d1353f8e4cc204c3b49beacc63500644556faf25ded617.png" alt="Icon shot next light">
         </a>
-      </li-->
+      </li>
     </ul>
     <div style="text-align:center;"class="modal-header">
       <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
