--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
   <body id="zero" style="position: relative;">
 
 <!--TOP Gif-->
-      <div class="" style="background:url(imgs/desktop_background-min.jpg);
+      <div class="topgif" style="background:url(imgs/desktop_background-min.jpg);
       background-repeat:no-repeat; background-size:cover; background-position:center; background-color:#76c6d4;
       text-align:center; height: 100vh; width:100%; overflow:hidden;">
         <div class="arrow-down-container">
