--- a/index.html
+++ b/index.html
@@ -238,11 +238,7 @@
 <!--NAVBAR END-->
 
 <!--Design + Strategy-->
-    <div id="one" style=" background: url(imgs/backpic4bw.jpg) no-repeat center center;
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
+    <div id="one" class="design-img" style="
         background-color:#fff; text-align:left; padding-left:0px; height:100vh;">
       <div class="design-text" style="text-align:center;">
           <h1 class"text-in-1" style="">Design <span>Strategy.</span></h1>
