--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 <!--NAVBAR END-->
 
 <!--Design + Strategy-->
-    <div id="one" class="design-img" style="
+    <div class="design-img" style="
         background-color:#fff; text-align:left; padding-left:0px; height:100vh;">
       <div class="design-text" style="text-align:center;">
           <h1 class"text-in-1" style="">Design <span>Strategy.</span></h1>
