--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 
 <!--Design + Strategy-->
     <div class="design-img" style="
-        text-align:left; height:100vh;">
+        text-align:left;">
       <div class="design-text" style="text-align:center;">
           <h1 class"text-in-1" style="">Design <span>Strategy.</span></h1>
           <h2 class"text-in-1" style="">Oscar Lund. Freelance Designer.</h2>
