--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
         
       <!--TEST--><div class="arrow-down-container">
         <div class="heart-conten">
-          <a href="#one"><div class="arrow arrow-down"><img style="width:20px; box-shadow: 1px 1px 5px #333;" src="imgs/arrow-down_200.png"></img></div> </a>
+          <a href="#two"><div class="arrow arrow-down"><img style="width:20px; box-shadow: 1px 1px 2px #333;" src="imgs/arrow-down_200.png"></img></div> </a>
           <div clas="heart heart1"></div>
           <div clas="heart heart2"></div>
           <div clas="heart heart3"></div>
