--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
         <div>
           <a target="_blank" rel="noreferrer" href="http://oscarlund.com/dailyui">
             <div style="text-align:center; margin-top:50px;">
-            <button class="button_black" style="font-size:12px; font-weight:400; opacity:1;">My DailyUI Challenge<img class="bounce-hover" src="imgs/arrow-right-eee.svg"></button></p>
+            <button class="button_black" style="font-size:12px; font-weight:400; opacity:1;">My DailyUI Challenge<img class="bounce-hover" src="imgs/arrow-right-eee.svg"></button>
             </div>
           </a>
         </div>
@@ -261,7 +261,7 @@
         </div><!--TEST-->
         </div>
       </div>
-    </div>
+  
 
 <!--Skills-->
   <div id="two" class="container-blue" style="text-align:center; padding: 60px 0px 30px 0px;">
