--- a/index.html
+++ b/index.html
@@ -251,13 +251,16 @@
             </div>
           </a>
        </div>
-      <!--TEST--><div class="arrow-down-container"> 
+      <!--TEST-->
+        <div class="arrow-down-container"> 
          <div class="heart-conten">
-          <a href="#two"><div class="arrow arrow-down"><img style="width:20px; box-shadow: 1px 1px 2px #333;" src="imgs/arrow-down_200.png"></img></div> </a>
+          <a href="#two"><div class="arrow arrow-down"><img style="width:20px; box-shadow: 1px 1px 2px #333;" src="imgs/arrow-down_200.png"></div> </a>
           <div clas="heart heart1"></div>
           <div clas="heart heart2"></div>
           <div clas="heart heart3"></div>
-        </div><!--TEST-->
+        </div>
+        </div>
+        <!--TEST-->
       </div>
   
 
