--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
           </a>
        </div>
       <!--TEST-->
-        <div class="arrow-down-container"> 
+        <div class="arrow-down-container">
          <div class="heart-conten">
           <a href="#two"><div class="arrow arrow-down"><img style="width:20px; box-shadow: 1px 1px 2px #333;" src="imgs/arrow-down_200.png"></div> </a>
           <div clas="heart heart1"></div>
@@ -262,6 +262,8 @@
         </div>
         <!--TEST-->
       </div>
+    </div>
+
   
 
 <!--Skills-->
