--- a/index.html
+++ b/index.html
@@ -238,9 +238,8 @@
 <!--NAVBAR END-->
 
 <!--Design + Strategy-->
-    <div class="design-img" style="
-        text-align:left;">
-      <div class="design-text" style="text-align:center;">
+    <div id="one" style="text-align:left;">
+      <div class="design-text" style="display: inline-block; text-align:center;">
           <h1 class"text-in-1" style="">Design <span>Strategy.</span></h1>
           <h2 class"text-in-1" style="">Oscar Lund. Freelance Designer.</h2>
           <p class="h3top" >Sharp, value adding design for web & print.</p>
@@ -250,19 +249,8 @@
             <button class="button_black" style="font-size:12px; font-weight:400; opacity:1;">My DailyUI Challenge<img class="bounce-hover" src="imgs/arrow-right-eee.svg"></button>
             </div>
           </a>
-       </div>
-       </div>
-      <!--TEST-->
-        <div class="arrow-down-container">
-         <div class="heart-conten">
-          <a href="#two"><div class="arrow arrow-down"><img style="width:20px; box-shadow: 1px 1px 2px #333;" src="imgs/arrow-down_200.png"></div> </a>
-          <div clas="heart heart1"></div>
-          <div clas="heart heart2"></div>
-          <div clas="heart heart3"></div>
         </div>
-        </div>
-        <!--TEST-->
-      
+      </div>
     </div>
 
   
