--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
     </nav>
 <!--NAVBAR END-->
 
-<!--Design + Strategy-->
+      <!--Design + Strategy-->
     <div id="one" style="text-align:left;">
       <div class="design-text" style="display: inline-block; text-align:center;">
           <h1 class"text-in-1" style="">Design <span>Strategy.</span></h1>
@@ -251,6 +251,16 @@
           </a>
         </div>
       </div>
+<!--TEST-->
+      <div class="arrow-down-container">
+      <div class="heart-conten">
+        <a href="#one"><div class="arrow arrow-down"><img style="width:20px;" src="imgs/arrow-down_200.png"></img></div> </a>
+        <div clas="heart heart1"></div>
+        <div clas="heart heart2"></div>
+        <div clas="heart heart3"></div>
+      </div>
+      </div>
+      <!--TEST-->
     </div>
 
   
