--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 
       <!--Design + Strategy-->
     <div id="one" style="text-align:left;">
-      <div class="design-text" style="display: inline-block; text-align:center;">
+      <div class="design-text" style="text-align:center;">
           <h1 class"text-in-1" style="">Design <span>Strategy.</span></h1>
           <h2 class"text-in-1" style="">Oscar Lund. Freelance Designer.</h2>
           <p class="h3top" >Sharp, value adding design for web & print.</p>
@@ -254,7 +254,7 @@
 <!--TEST-->
       <div class="arrow-down-container">
       <div class="heart-conten">
-        <a href="#one"><div class="arrow arrow-down"><img style="width:20px;" src="imgs/arrow-down_200.png"></img></div> </a>
+        <a href="#one"><div class="arrow arrow-down"><img style="width:20px;" src="imgs/arrow-down_200.png"></div> </a>
         <div clas="heart heart1"></div>
         <div clas="heart heart2"></div>
         <div clas="heart heart3"></div>
