--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 <!--NAVBAR END-->
 
       <!--Design + Strategy-->
-    <div id="one" style="text-align:left;">
+    <div class="design-img" style="text-align:left;">
       <div class="design-text" style="text-align:center;">
           <h1 class"text-in-1" style="">Design <span>Strategy.</span></h1>
           <h2 class"text-in-1" style="">Oscar Lund. Freelance Designer.</h2>
