--- a/index.html
+++ b/index.html
@@ -318,11 +318,11 @@
   <div id="three" class="" style="text-align:center; padding:0px 0px 50px 0px; background-color:#F4F4F4;">
     <div style="display: inline-block; margin:50px 0 0px 0px; text-align:center;">
       <h1 class="" style="color:#313746;">Portfolio</h1>
-      <h2 class="header2" style="color:#474E62;">A thing from the past</h1>
+      <h2 class="header2" style="color:#474E62; margin:0 0 40px 0;">A thing from the past</h2>
     </div>
   <!--Portfolio container-->
     <div class="container">
-      <ul id="filters" class="clearfix" style="text-align:center;">
+      <ul id="filters" class="clearfix" style="text-align:center; display:none;">
         <li><span class="filter active" data-filter=".app, .graphic, .logo, .product, .video, .web">All</span></li>
         <li><span class="filter" data-filter=".app">App</span></li>
         <li><span class="filter" data-filter=".graphic">Graphic</span></li>
