--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 <!--TEST-->
       <div class="arrow-down-container">
       <div class="heart-conten">
-        <a href="#two"><div class="arrow arrow-down"><img style="width:20px;" src="imgs/arrow-down_200.png"></div> </a>
+        <a href="#two"><div class="arrow arrow-down"><img style="width:20px;" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/arrow-down-black-200.png"></div> </a>
         <div clas="heart heart1"></div>
         <div clas="heart heart2"></div>
         <div clas="heart heart3"></div>
