--- a/index.html
+++ b/index.html
@@ -266,7 +266,8 @@
   
 
 <!--Skills-->
-  <div id="two" class="container-blue" style="text-align:center; padding: 60px 0px 30px 0px;">
+  <div id="two" class="container-blue" style="text-align:center; padding: 60px 0px 30px 0px; background:url(https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/skills-background.jpg);
+      background-repeat:no-repeat; background-size:cover; background-position:center;">
     <div class="" style="display: inline-block; margin:0; text-align:center;">
       <h1  class="" style="color:#f0f1f2;">Skills</h1>
     </div>
