--- a/index.html
+++ b/index.html
@@ -735,7 +735,8 @@
 
 
   <!--Contact Me 1-->
-  <div id="four" class="container-grey" style="text-align:center; padding:50px 0 50px 0px;">
+  <div id="four" class="container-grey" style="text-align:center; padding:50px 0 50px 0px; background:url(https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/connect-background.jpg);
+      background-repeat:no-repeat; background-size:cover; background-position:center;">
     <div class="" style="display: inline-block; text-align:center;">
     <h1 class"text-in-1" style="color:#fff;">Let's <span style="color:#fff;">Connect.</span></h1>
     <h2 class"text-in-1" style="color:#fff;">I can help you reach your design goals!</h2>
