--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
   
 
 <!--Skills-->
-  <div id="two" class="container-blue" style="text-align:center; padding: 60px 0px 30px 0px; background:url(https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/skills-background.jpg);
+  <div id="two" class="container-blue" style="text-align:center; padding: 60px 0px 30px 0px; background:url(https://raw.githubusercontent.com/oscarlund/portfolio2/310e752b56b7adceaa71c003f458b39c30348539/imgs/green-background.png);
       background-repeat:no-repeat; background-size:cover; background-position:center;">
     <div class="" style="display: inline-block; margin:0; text-align:center;">
       <h1  class="" style="color:#f0f1f2;">Skills</h1>
@@ -735,7 +735,7 @@
 
 
   <!--Contact Me 1-->
-  <div id="four" class="container-grey" style="text-align:center; padding:50px 0 50px 0px; background:url(https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/black-background.png);
+  <div id="four" class="container-grey" style="text-align:center; padding:50px 0 50px 0px; background:url(https://raw.githubusercontent.com/oscarlund/portfolio2/310e752b56b7adceaa71c003f458b39c30348539/imgs/black-background.png);
       background-repeat:no-repeat; background-size:cover; background-position:center;">
     <div class="" style="display: inline-block; text-align:center;">
     <h1 class"text-in-1" style="color:#fff;">Let's <span style="color:#fff;">Connect.</span></h1>
