--- a/index.html
+++ b/index.html
@@ -765,9 +765,9 @@
     <!--Skills IMGs-->
     <div class="lidiv">
       <ul style="text-align:center; color:#313746;" class="imgs2">
-        <a style="color:#555;" target="_blank" rel="noreferrer" href="http://www.chalmers.se"><li><img class="img-skill2" style="border-radius:50%; box-shadow:0px 1px 5px #ccc;" src="imgs/chalmers_ico2.png"><h3>CHALMERS<br><p style="text-transform:uppercase; color:#555;">Gothenburg</p></h3></li></a>
-        <a style="color:#555;" target="_blank" rel="noreferrer" href="http://www.etseib.upc.edu"><li><img class="img-skill2" style="border-radius:50%; box-shadow:0px 1px 5px #ccc;" src="imgs/upc_ico.png"><h3>ETSEIB<br><p style="text-transform:uppercase; color:#555;">Barcelona</p></h3></li></a>
-        <a style="color:#555;" target="_blank" rel="noreferrer" href="http://www.harvard.edu"><li><img class="img-skill2" style="border-radius:50%; box-shadow:0px 1px 5px #ccc;" src="imgs/harvard_ico2.png"><h3>HARVARD<br><p style="text-transform:uppercase; color:#555;">Cambridge</p></h3></li></a>
+        <li><a style="color:#555;" target="_blank" rel="noreferrer" href="http://www.chalmers.se"><img class="img-skill2" style="border-radius:50%; box-shadow:0px 1px 5px #ccc;" src="imgs/chalmers_ico2.png"><h3>CHALMERS<br><p style="text-transform:uppercase; color:#555;">Gothenburg</p></h3></a></li>
+        <li><a style="color:#555;" target="_blank" rel="noreferrer" href="http://www.etseib.upc.edu"><img class="img-skill2" style="border-radius:50%; box-shadow:0px 1px 5px #ccc;" src="imgs/upc_ico.png"><h3>ETSEIB<br><p style="text-transform:uppercase; color:#555;">Barcelona</p></h3></a></li>
+        <li><a style="color:#555;" target="_blank" rel="noreferrer" href="http://www.harvard.edu"><img class="img-skill2" style="border-radius:50%; box-shadow:0px 1px 5px #ccc;" src="imgs/harvard_ico2.png"><h3>HARVARD<br><p style="text-transform:uppercase; color:#555;">Cambridge</p></h3></a></li>
       </ul>
     </div>
   </div>
