--- a/index.html
+++ b/index.html
@@ -266,10 +266,10 @@
   
 
 <!--Skills-->
-  <div id="two" class="container-blue" style="text-align:center; padding: 60px 0px 30px 0px; background:url(https://raw.githubusercontent.com/oscarlund/portfolio2/310e752b56b7adceaa71c003f458b39c30348539/imgs/green-background.png);
+  <div id="two" class="container-blue" style="text-align:center; padding: 80px 0px 60px 0px; background:url(https://raw.githubusercontent.com/oscarlund/portfolio2/310e752b56b7adceaa71c003f458b39c30348539/imgs/green-background.png);
       background-repeat:no-repeat; background-size:cover; background-position:center;">
     <div class="" style="display: inline-block; margin:0; text-align:center;">
-      <h1  class="" style="color:#f0f1f2;">Skills</h1>
+      <h1  class="" style="color:#f0f1f2;">Full Stack Designer</h1>
     </div>
     <!--Skills IMGs-->
     <div class="lidiv">
