--- a/index.html
+++ b/index.html
@@ -275,30 +275,29 @@
     <div class="lidiv">
       <ul style="text-align:center; color:#fff;" class="imgs2">
         <li><img class="img-skill" style="border-radius:0%;" src="imgs/user4.png">
-          <h3>UX / UI DESIGN</h3>
+          <h3>UX DESIGN</h3>
           <h4 style="margin-top:-15px;">
             DESIGN STRATEGY<br>
-            PROTOTYPING<br>
+            SKETCHING<br>
+            WIREFRAMING<br>
             USER TESTING<br>
-            LAYOUT<br>
         </h4>
         </li>
-        <li><img class="img-skill" style="border-radius:0%;" src="imgs/code.png">
-          <h3>FRONT END DEV</h3>
+        <li><img class="img-skill" style="border-radius:0%;" src="imgs/pen.png">
+          <h3>UI DESIGN</h3>
           <h4 style="margin-top:-15px;">
-            HTML 5<br>
-            CSS 3<br>
-            JAVASCRIPT<br>
+            VISUAL DESIGN<br>
+            HIGH-FIDELITY COMPS.<br>
+            INTERFACE DESIGN<br>
           </h4>
         </li>
-        <li><img class="img-skill" style="border-radius:0%;" src="imgs/pen.png">
-          <h3>VISUAL DESIGN</h3>
+        <li><img class="img-skill" style="border-radius:0%;" src="imgs/code.png">
+          <h3>FRONT-END DEV</h3>
           <h4 style="margin-top:-15px;">
-            PHOTOSHOP<br>
-            SKETCH<br>
-            ILLUSTRATOR<br>
-            AFTER EFFECTS<br>
-            XD
+            HTML<br>
+            CSS<br>
+            JS<br>
+            PROTOTYPING<br>
           </h4>
         </li>
       </ul>
