--- a/index.html
+++ b/index.html
@@ -287,8 +287,8 @@
           <h3>UI DESIGN</h3>
           <h4 style="margin-top:-15px;">
             VISUAL DESIGN<br>
-            HIGH-FIDELITY COMPS.<br>
             INTERFACE DESIGN<br>
+            HIGH FIDELITY<br>
           </h4>
         </li>
         <li><img class="img-skill" style="border-radius:0%;" src="imgs/code.png">
