--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
       <!--Design + Strategy-->
     <div class="design-img" style="text-align:left;">
       <div class="design-text" style="text-align:center;">
-          <h1 class"text-in-1" style="">Design <span>Strategy.</span></h1>
+          <h1 class"text-in-1" style="">Full-Stack <span>Designer</span></h1>
           <h2 class"text-in-1" style="">Oscar Lund. Freelance Designer.</h2>
           <p class="h3top" >Sharp, value adding design for web & print.</p>
         <div>
@@ -269,7 +269,7 @@
   <div id="two" class="container-blue" style="text-align:center; padding: 80px 0px 60px 0px; background:url(https://raw.githubusercontent.com/oscarlund/portfolio2/310e752b56b7adceaa71c003f458b39c30348539/imgs/green-background.png);
       background-repeat:no-repeat; background-size:cover; background-position:center;">
     <div class="" style="display: inline-block; margin:0; text-align:center;">
-      <h1  class="" style="color:#f0f1f2;">Full-Stack Designer</h1>
+      <h1  class="" style="color:#f0f1f2;">Designer Skills</h1>
     </div>
     <!--Skills IMGs-->
     <div class="lidiv">
