--- a/index.html
+++ b/index.html
@@ -240,6 +240,7 @@
       <!--Design + Strategy-->
     <div class="design-img" style="text-align:left;">
       <div class="design-text" style="text-align:center;">
+          <img style="width:100px; height:100px;" src="/imgs/oscarlund-productions-300.png">
           <h1 class"text-in-1" style="">Full-Stack <span>Designer</span></h1>
           <h2 class"text-in-1" style="">Oscar Lund. Freelance Designer.</h2>
           <p class="h3top" >Sharp, value adding design for web & print.</p>
@@ -297,7 +298,6 @@
             HTML<br>
             CSS<br>
             JS<br>
-            PROTOTYPING<br>
           </h4>
         </li>
       </ul>
