--- a/index.html
+++ b/index.html
@@ -359,7 +359,8 @@
                 <span class="text-category">Ace-Up Inc.</span>
               </div>
               <div class="label-bg"></div>
-            </div>
+              </div>
+            </a>
           </div>
         </div>
 
@@ -378,14 +379,16 @@
 
         <div class="portfolio app" data-cat="app">
           <div class="portfolio-wrapper">
+            <a data-toggle="modal" data-target="#aceup_homepage" data-whatever="@mdo">
             <img src="imgs/portfolios/app/mobile_app_thumb.jpg" alt="" />
             <div class="label">
-              <div class="label-text">
-                <a class="text-title">iOS Application</a>
+              <div style="margin-left:-3px" class="label-text">
+                <a data-toggle="modal" data-target="#AUHomepage" data-whatever="@mdo" class="text-title">iOS App</a>
                 <span class="text-category">Chalmers Uni.</span>
               </div>
               <div class="label-bg"></div>
             </div>
+            </a> 
           </div>
         </div>
 
@@ -586,6 +589,50 @@
       </div>
       </div>
       <!--Aceup homepage MODAL End-->
+    
+     <!--DKV start-->
+      <div style="text-align:center;" class="modal fade" id="mobileapp-dkv" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content" >
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="exampleModalLabel">Mobile App UI</h4>
+          </div>
+          <div class="modal-body">
+            <form action="mailto:olund90@gmail.com" method="post" enctype="text/plain">
+              <img style="border-radius:27px; width:100%; max-width:400px;" src="imgs/waga_loop.gif" alt="" />
+
+
+              <!--div class="form-group">
+                <label for="recipient-name" class="control-label">Your Email Adress:</label>
+                <input type="text" class="form-control" id="recipient-name">
+              </div>
+
+              <div class="form-group">
+                <label for="message-text" class="control-label">Message:</label>
+                <textarea class="form-control" id="message-text"></textarea>
+              </div-->
+            <!--TEXT Transaction Emails-->
+            <div class="modal-text-container">
+            <p>
+              In collaboration with <a href="http://jonasberglund.co">Jonas Berglund</a> I developed this mobile application for a social society at Chalmers University. My main responsibility was UX and UI Design. I also developed all the graphic content for the app. 
+
+              <!--br><br><b>Tools in use:</b><br>
+              <img style="width:50px; margin:0; padding:0;" src="imgs/app-icon-sketch.png">
+            </p-->
+            </div>
+            <!--TEXT Transaction Emails END-->
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            <!--button type="button" class="btn btn-primary">Send message</button-->
+          </div>
+        </div>
+      </div>
+      </div>
+      </div>
+      <!--DKV End-->
 
       <!--MODAL VC Movie-->
       <div class="modal fade" id="VCMovieModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
