--- a/index.html
+++ b/index.html
@@ -377,13 +377,13 @@
           </div>
         </div>
 
-        <div class="portfolio app" data-cat="app">
+        <div class="mobileapp-dkv" data-cat="app">
           <div class="portfolio-wrapper">
-            <a data-toggle="modal" data-target="#aceup_homepage" data-whatever="@mdo">
+            <a data-toggle="modal" data-target="#mobileapp-dkv" data-whatever="@mdo">
             <img src="imgs/portfolios/app/mobile_app_thumb.jpg" alt="" />
             <div class="label">
               <div style="margin-left:-3px" class="label-text">
-                <a data-toggle="modal" data-target="#AUHomepage" data-whatever="@mdo" class="text-title">iOS App</a>
+                <a data-toggle="modal" data-target="#mobileapp-dkv" data-whatever="@mdo" class="text-title">iOS App</a>
                 <span class="text-category">Chalmers Uni.</span>
               </div>
               <div class="label-bg"></div>
