--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
           </div>
         </div>
 
-        <div class="mobileapp-dkv" data-cat="app">
+        <div class="portfolio app" data-cat="app">
           <div class="portfolio-wrapper">
             <a data-toggle="modal" data-target="#mobileapp-dkv" data-whatever="@mdo">
             <img src="imgs/portfolios/app/mobile_app_thumb.jpg" alt="" />
