--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
           </div>
           <div class="modal-body">
             <form action="mailto:olund90@gmail.com" method="post" enctype="text/plain">
-              <img style="border-radius:27px; width:100%; max-width:400px;" src="imgs/waga_loop.gif" alt="" />
+              <img style="border-radius:27px; width:100%; max-width:400px;" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/portfolio-modal-gifs/dkv-app-modal.gif" alt="" />
 
 
               <!--div class="form-group">
