--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                     <span style="opacity:0;" class="icon-bar middle-bar"></span>
                     <span class="icon-bar bottom-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html" style="font-family: 'Merriweather', serif; font-size:12px; letter-spacing:0px;"><b >Oscar Lund</b>&nbsp;&nbsp;Creative Development</a>
+                <a class="navbar-brand" href="index.html" style="font-family: 'Merriweather', serif; font-size:12px; letter-spacing:0px;"><b >Oscar Lund</b>&nbsp;&nbsp;Full-Stack Designer</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
