--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 <!--TOP Gif END-->
 
 <!--NAVBAR-->
-      <nav id="one" class="navbar navbar-inverse navbar-static-top" role="navigation">
+      <nav id="one" class="navbar navbar-inverse navbar-fixed" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
